--- a/crates/server/assets/css/main_input.css
+++ b/crates/server/assets/css/main_input.css
@@ -1,26 +1,18 @@
 @import 'open-props/normalize.min.css';
 @import 'open-props/buttons.min.css';
 
-body {
-    overflow-x:hidden;
-    /* display:grid; */
-    justify-items:flex-start;
-    grid-template-columns:var(--size-8) calc(100% - 2 * var(--size-8)) var(--size-8);
-}
-
-@media (max-width: 767px) {
-    body {
-        grid-template-columns:var(--size-3) calc(100% - 2 * var(--size-3)) var(--size-3);
-    }
-}
-
-body > * {
-    grid-column: 2;
-}
+body {}
 
 body > .full-width {
-    width:100%;
-    grid-column:1 / -1;
+    /* width:100%; */
+    /* grid-column:1 / -1;
+    place-self: ; */
+    /* align-self: stretch; */
+}
+
+body > .container {
+    display: grid;
+    place-content: center;
 }
 
 .nav {
@@ -28,7 +20,6 @@ body > .full-width {
     z-index:var(--layer-1);
     top: 0;
     overflow-x:auto;
-    background-image:linear-gradient(to bottom,hsl(var(--gray-9-hsl) / 98%) 1ch,75%,hsl(var(--gray-9-hsl) / 0%));
     padding-block:var(--size-2) var(--size-5);
     padding-inline:var(--size-2) var(--size-4);
     padding-inline-start:var(--size-8); 
@@ -37,6 +28,11 @@ body > .full-width {
     align-items: center;
     white-space: nowrap;
     gap: var(--size-4);
+
+    background-image:linear-gradient(to bottom,hsl(var(--gray-3-hsl) / 98%) 1ch,75%,hsl(var(--gray-3-hsl) / 0%));
+    @media (prefers-color-scheme: dark) {
+        background-image:linear-gradient(to bottom,hsl(var(--gray-10-hsl) / 98%) 1ch,75%,hsl(var(--gray-10-hsl) / 0%));
+    }
 }
 
 .nav a[href]:not(:hover,:focus-visible) {
