Added binding variables to equation section under chart

--- a/crates/server/assets/css/main_input.css
+++ b/crates/server/assets/css/main_input.css
@@ -120,3 +120,11 @@ ul.error-list {
     list-style-type: none;
     padding: var(--size-1);
 }
+
+.block-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: var(--size-content-2);
+    gap: var(--size-5) var(--size-8);
+    align-items: flex-start;
+  }
